# Enjaz

./: .gitignore  App.tsx  CHANGELOG.md  CONTRIBUTING.md  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Public/: manifest.json  robots.txt
Public/icon/: README.md
components/: AddMemberForm.tsx  AddTaskForm.tsx  Dashboard.tsx  MemberCard.tsx  Notification.tsx  OnboardingTour.tsx  PDFDocument.tsx  TaskManagerCard.tsx  WelcomePage.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
utils/: storage.ts
