[package]
name = "enjaz"
version = "1.0.0"
description = "إنجاز - نظام متابعة الأداء وإدارة الفريق"
authors = ["H3m0rv1ch1"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "Enjaz"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "enjaz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
